<resources>
    <string name="app_name">PetLogger</string>
    <string name="add_pet">Add Pet</string>
    <string name="add_event">Add Event</string>
    <string name="pet_species_field">Write pet species here</string>
    <string name="pet_breed_field">Write pet breed here</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="pet_sex_field">Put pet sex here</string>
    <string name="pet_additional_notes">Additional notes</string>
    <string name="pet_name_header">Name</string>
    <string name="pet_age_header">Age</string>
    <string name="pet_species_header">Species</string>
    <string name="pet_breed_header">Breed</string>
    <string name="edit_pet_button">Edit Pet</string>
    <string name="pet_sex_header">Sex</string>
    <string name="pet_dob_header">Date of Birth</string>
    <string name="input_event_date">+Event Date</string>
    <string name="input_event_time">+Event Time</string>
    <string name="pets_involved_button">+Pet(s)</string>
    <string name="add_pets">Add Pets</string>
    <string name="cancel">Cancel</string>
    <string name="select_pets">Select Pets</string>
    <string name="edit_event_button">Edit Event</string>
    <string name="event_title_header">Title</string>
    <string name="event_date_header">Date</string>
    <string name="event_details_header">Details</string>
    <string name="event_pets_involved_header">Pets Involved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_header">Time</string>
    <string name="input_weight_date">+Weight Date</string>
    <string name="input_weight_time">+Weight Time</string>
    <string name="pet_involved_button">+Pet Involved</string>
    <string name="add_weight">Add Weight</string>
    <string name="weight_unit">g</string>
    <string name="not_available">N/A</string>
    <string name="pet_latest_weight_header">Latest Weight</string>
    <string name="pet_latest_weight">%s %s</string>
    <string name="pet_weighing_date_header">Weighing Date</string>
    <string name="amt_with_limit_selected">%s/%s selected</string>
    <string name="amt_without_limit_selected">%s selected</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="no_pet_name_given">Pet needs a name!</string>
    <string name="pet_sex_male">Male</string>
    <string name="pet_sex_female">Female</string>
    <string name="pet_sex_other">Other</string>
    <string name="delete">Delete</string>
    <string name="pet_events_header">Events</string>
    <string name="pet_weights_header">Weights</string>
    <string name="old_photos_header">Old Photos</string>
    <string name="new_photos_header">New Photos</string>
    <string name="photos_header">Photos</string>
    <!-- ViewWeight Screen -->
    <string name="viewing_pets_weight">Viewing %s Weight</string>
    <string name="weightGramsDisplay">%s grams</string>
    <string name="previous_weight">Previous Weight: %s gram(s)</string>
    <string name="weight_difference_plus">(+%s gram(s))</string>
    <string name="weight_difference_minus">(-%s gram(s))</string>
    <string name="weight_difference_no_change">(+0 grams)</string>
    <string name="weight_note_header">Note</string>
    <string name="viewing_details">Viewing Details</string>
    <string name="editing_details">Editing Details</string>
    <string name="event_list_header">Event List</string>
    <string name="viewing_event_details">Viewing Event</string>
    <string name="editing_event_details">Editing Event</string>
    <string name="note_list_header">Note List</string>
    <string name="new_event_header">New Event</string>
    <string name="new_pet_header">New Pet</string>
    <string name="new_weight_header">New Weight</string>
    <string name="weight_list_header">Weights List</string>
    <string name="media_gallery_header">Media Gallery</string>
    <string name="weight">Weight</string>
    <string name="edit_weight_button">Edit Weight</string>
    <string name="date">Date</string>
    <string name="change_associated_pet_button">Change Associated Pet</string>
    <string name="title">Title</string>
    <string name="note_details">Details</string>
    <string name="clear">Clear</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note_button">Edit Note</string>
    <string name="viewing_note_details">Viewing Note</string>
    <string name="reset">Reset</string>
    <string name="new_note_header">New Note</string>
    <string name="view_untitled_note_header">Untitled Note</string>
    <string name="editing_pet_details">Editing Pet</string>
    <string name="editing_note_details">Editing Note</string>
    <string name="pet_list_header">Pet List</string>
    <string name="ok">Ok</string>
    <string name="add_events">Add Events</string>
    <string name="associated_events">Associated Events</string>
    <string name="add_weights">Add Weights</string>
    <string name="add_photos">Add Photos</string>
    <string name="associated_photos">Associated Photos</string>
    <string name="photo_selection_limit_reached">Photo selection limit reached. Deselect some photos if you wish to pick more.</string>
    <string name="select_photo">Select Photo</string>
    <string name="width_header">Width</string>
    <string name="height_header">Height</string>
    <string name="file_size_header">Size</string>
    <string name="clear_photo">Clear Photo</string>
    <string name="edit_button">Edit</string>
    <string name="viewing_photo_details">Viewing Photo</string>
    <string name="editing_photo_details">Editing Photo</string>
    <string name="last_updated">Last Updated</string>
    <string name="selected_photo">Selected Photo</string>
    <string name="associated_weights">Associated Weights</string>
    <string name="pet_birthdate">Birthdate</string>
    <string name="confirm_pet_deletion_title">Confirm Pet Deletion</string>
    <string name="confirm_pet_deletion_message">Are you sure you want to delete this pet?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="select">Select</string>
    <string name="none_selected">None Selected</string>
    <string name="details">Details</string>
    <string name="viewed_weight">Viewed Weight</string>
    <string name="previous_weight_header">Previous Weight</string>
    <string name="confirm_photo_deletion_title">Confirm Photo Deletion</string>
    <string name="confirm_photo_deletion_message">Are you sure you want to delete this photo?</string>
    <string name="confirm_weight_deletion_title">Confirm Pet Weight Deletion</string>
    <string name="confirm_weight_deletion_message">Are you sure you want to delete this pet weight entry?</string>
    <string name="confirm_note_deletion_title">Confirm Note Deletion</string>
    <string name="confirm_note_deletion_message">Are you sure you want to delete this note?</string>
    <string name="confirm_event_deletion_title">Confirm Event Deletion</string>
    <string name="confirm_event_deletion_message">Are you sure you want to delete this event?</string>
    <string name="add_notes">Add Notes</string>
    <string name="notes_header">Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="confirm">Confirm</string>
    <string name="enter_tag">Enter Tag</string>
    <string name="add_tags">Add Tags</string>
    <string name="tags">Tags</string>
    <string name="pets">Pets</string>
    <string name="monitor">Monitor</string>
    <string name="events">Events</string>
    <string name="notes">Notes</string>
    <string name="gallery">Gallery</string>
    <string name="weights">Weights</string>
    <string name="media">Media</string>
    <string name="viewing_tagged_content">Viewing Tagged Content</string>
    <string name="profile">Profile</string>
    <string name="new_photo_header">New Photo</string>
    <string name="difference">Difference</string>
    <string name="amt_difference">%s difference</string>
    <string name="time_elapsed">%s ago</string>
    <string name="add_new_pet_content_desc">Add new pet</string>
    <string name="add_new_photo_content_desc">Add new photo</string>
    <string name="add_new_weight_content_desc">Add new pet weight</string>
    <string name="add_new_event_content_desc">Add new event</string>
    <string name="add_new_note_content_desc">Add new note</string>
    <string name="search_events">Search Events</string>
    <string name="search_weights">Search Weights</string>
    <string name="search_photos">Search Photos</string>
    <string name="search_pets">Search Pets</string>
    <string name="keeping">Keeping</string>
    <string name="removing">Removing</string>
    <string name="adding">Adding</string>
    <string name="loading_pet">Loading Pet</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="pet_date_of_passing_header">Date of Passing</string>
    <string name="loading">Loading...</string>
    <string name="pet_not_found">Pet Not Found</string>
    <string name="status">Status</string>
    <string name="viewing_pet">Viewing Pet</string>
    <string name="edit">Edit</string>
    <string name="editing_pet_weight">Editing %s Weight</string>
</resources>