<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.photo.mediaselection.MediaSelectionFragment">

    <data>
        <variable
            name="viewModel"
            type="com.hfad.petlogger.screens.photo.mediaselection.MediaSelectionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search_photos"/>
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:flexWrap="nowrap"
            app:justifyContent="space_around">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_keep_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keeping"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                android:checked="@{viewModel.toKeepButtonChecked}"
                android:drawableStart="@drawable/selection_to_keep"
                app:iconGravity="start"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adding"
                android:drawableStart="@drawable/selection_to_add"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                android:checked="@{viewModel.toAddButtonChecked}"
                app:iconGravity="start" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/to_remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/removing"
                android:drawableStart="@drawable/selection_to_remove"
                android:clickable="true"
                android:focusable="true"
                android:checkable="true"
                android:checked="@{viewModel.toRemoveButtonChecked}"
                app:iconGravity="start" />
        </com.google.android.flexbox.FlexboxLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="top"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/addPhotosButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/add_photos" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
</layout>