<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ViewNoteFragment">
    <data>
        <variable
            name="viewModel"
            type="com.hfad.petlogger.ViewNoteViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteTitleTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noteTitleTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.note.title}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteDetailsTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_details">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noteDetailsTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.note.details}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_note_button"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"/>
        </LinearLayout>
    </LinearLayout>

</layout>