<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ViewPetFragment">
    <data>
        <variable
            name="viewEventViewModel"
            type="com.hfad.petlogger.ViewEventViewModel" />
        <variable
            name="associatedPhotosDisplayViewModel"
            type="com.hfad.petlogger.AssociatedPhotosDisplayViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventTitleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title_header" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewEventViewModel.event.title}"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date_header">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewEventViewModel.eventDate.toString()}"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventTimeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_header">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventTimeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewEventViewModel.eventTime.toString()}"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventDetailsTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_details_header">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventDetailsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewEventViewModel.event.details}"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/event_pets_involved_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pets_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"/>
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/associated_photos_fragment_container_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.hfad.petlogger.AssociatedPhotosDisplayFragment"
                tools:layout="@layout/fragment_associated_photos_display" />

            <Button
                android:id="@+id/edit_event_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_event_button"/>
            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>
        </LinearLayout>
    </ScrollView>
</layout>