<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MediaSingleSelectionFragment">

    <data>
        <variable
            name="mediaSingleSelectionViewModel"
            type="com.hfad.petlogger.MediaSingleSelectionViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/appBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/selected_photo"
                    app:titleCentered="true"/>
            </com.google.android.material.appbar.AppBarLayout>
            <ImageView
                android:id="@+id/photoDisplay"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/placeholder" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectPhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_photo"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearPhotoSelectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resetPhotoSelectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>