<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.event.eventmultiselection.EventMultiSelectionDisplayFragment">

    <data>
        <variable
            name="viewModel"
            type="com.hfad.petlogger.screens.event.eventmultiselection.EventMultiSelectionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search_pets"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/events_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </androidx.core.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/addEventsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/add_events" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/reset" />
        </LinearLayout>
    </LinearLayout>
</layout>